# agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md
.claude/: settings.local.json
docs/: PROGRESS.md  SOLUTION.md
docs/superpowers/plans/: 2026-06-29-p0-agent-contracts-evidence-confidence-plan.md
docs/superpowers/specs/: 2026-06-29-p0-agent-contracts-evidence-confidence-design.md
scripts/: demo.py
src/: config.py  main.py
src/agents/: __init__.py  base.py  code_reader.py  executor.py  planner.py  reporter.py  researcher.py  reviewer.py
src/api/: dependencies.py  task_manager.py
src/api/routes/: events.py  evidence.py  reports.py  tasks.py  tools.py
src/evaluation/: __init__.py  confidence.py
src/infrastructure/: __init__.py  llm.py  memory_store.py  milvus.py  redis.py
src/models/: __init__.py  agent_state.py  code_index.py  contract.py  enums.py  evidence.py  rag.py  report.py  task.py  tool_call.py
src/rag/: __init__.py  bm25_index.py  chunker.py  hybrid_search.py  indexer.py  pipeline.py
src/repo_analyzer/: __init__.py  cloner.py  indexer.py  jedi_analyzer.py  parser.py
src/tools/: __init__.py  exec_tools.py  file_tools.py  github_tools.py  registry.py  report_tools.py  web_tools.py
src/utils/: logging.py  token_counter.py
src/workflow/: __init__.py  checkpoint.py  context_manager.py  executor.py  graph.py  retry.py  timeout.py
tests/: conftest.py  test_agents.py  test_confidence.py  test_contracts.py  test_rag.py  test_tools.py  test_workflow.py
