[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-research-agent"
version = "0.1.0"
description = "Multi-agent research analysis platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "pymilvus>=2.4.0",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "jedi>=0.19.0",
    "openai>=1.35.0",
    "tenacity>=8.5.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
